--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>QR code component Challenge</title>
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="https://github.com/tuyyyio/qr-code-challenge/blob/main/style.css" />
 </head>
 
 <body>
