--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>QR code component Challenge</title>
-  <link rel="stylesheet" type = "text/css" href="qr-code-challenge/style.css">
+  <link rel="stylesheet" type = "text/css" href="css/style.css">
 </head>
 
 <body>
