--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>QR code component Challenge</title>
-  <link rel="stylesheet" type = "text/css" href="https://github.com/tuyyyio/qr-code-challenge/blob/c5ff7278d0f41fad342fce0b276e04607aa7780f/style.css">
+  <link rel="stylesheet" type = "text/css" href="https://raw.githubusercontent.com/tuyyyio/qr-code-challenge/main/style.css">
 </head>
 
 <body>
